routy pred dokoncenim
